--- a/index.html
+++ b/index.html
@@ -9,62 +9,62 @@
 <body>
     <main>
         <div class="bg-[url('1.jpg')] w-full bg-cover h-[100vh] pt-4 px-4">
-        <nav class="flex justify-between items-center px-12 py-4 bg-white rounded-full">
-            <div>
-                <p class=" text-2xl font-serif font-bold text-black">FLOWERS.</p>
-            </div>  
-            <div class="flex gap-12 text-black font-serif text-lg font-extralight">
-                <a href="index.html">Home</a>
-                <a href="">About</a>
-                <a href="product.html">Product</a>
-                <a href="">Communication</a>
-            </div>
-            <div class="flex gap-4">
-                <a href=""><img class="w-10 h-10" src="/Users/latifahalkhalaf/Desktop/Project/shopping-bag.png" alt=""></a>
-                <a href=""><img class="w-10 h-10"  src="/Users/latifahalkhalaf/Desktop/Project/user.png" alt=""></a>
-            </div>
-        </nav>
-        <div class="flex flex-col justify-center  gap-14 w-full h-[80vh] pt-14 px-14">
+            <nav class="flex justify-between items-center md:px-12 px-3 py-4 bg-white rounded-full">
+                <div>
+                    <p class="text-base md:text-2xl font-serif font-bold text-black">FLOWERS.</p>
+                </div>  
+                <div class="hidden md:flex gap-12 text-black font-serif text-lg font-extralight">
+                    <a href="index.html">Home</a>
+                    <a href="">About</a>
+                    <a href="product.html">Product</a>
+                    <a href="">Communication</a>
+                </div>
+                <div class="flex gap-4">
+                    <a href=""><img class="md:w-10 md:h-10 w-8 h-8" src="/Users/latifahalkhalaf/Desktop/Project/shopping-bag.png" alt=""></a>
+                    <a href=""><img class="md:w-10 md:h-10 w-8 h-8"  src="/Users/latifahalkhalaf/Desktop/Project/user.png" alt=""></a>
+                </div>
+            </nav>
+        <div class="flex flex-col justify-center  gap-14 w-full h-[80vh] md:pt-20 md:px-14 px-4">
         <div>
-            <p class="text-2xl text-rose-900 "><span class="text-4xl font-bold">|  </span>    FLOWER SHOP</p>
+            <p class="text-2xl font-serif text-rose-900 font-bold"><span class="text-4xl font-bold">|  </span>    FLOWER SHOP</p>
         </div>
         <div class="">
-            <p class="text-gray-800 text-6xl font-bold w-[35vw]">The Freshest Flowers Are Here</p>
+            <p class="text-gray-800 text-5xl md:text-6xl font-bold w-[35vw]">The Freshest Flowers Are Here</p>
         </div>
-        <div>
-            <button class="bg-rose-800 w-52 h-20 text-white text-2xl rounded-full">SHOP NOW</button>
+        <form action="product.html">
+            <button  class="bg-rose-800 w-72 h-20 text-white text-2xl rounded-full">SHOP NOW</button> 
+        </form>
         </div>
         </div>
-        </div>
-        <div class="h-[85vh] flex justify-center items-center  w-full gap-10">
-            <div class="bg-rose-50 flex justify-center items-center gap-10 shadow-2xl">
-             <div class="w[30vw] flex justify-center items-center ">
-                <img class="w-[25vw] h-[60vh]" src="35.jpg" alt="">
-            </div>   
+        <div class="md:h-[85vh] py-14 flex justify-center items-center  w-full gap-10">
+            <div class="bg-rose-50 flex justify-center items-center flex-col md:flex-row gap-10 shadow-2xl">
+                <div class="w[30vw] flex justify-center items-center ">
+                <img class="md:w-[25vw] md:h-[60vh] w-64 h-80" src="35.jpg" alt="">
+                </div>
             <div class="w-[50vw] flex flex-col gap-10">
-            <p class="text-3xl text-rose-900 font-serif font-bold">ABOUT US</p>
-            <p class="text-2xl font-serif w-[45vw] leading-relaxed">Welcome to FLOWERS, we offer a wide selection of carefully arranged fresh flowers for all occasions, including weddings, birthdays, and special events. Our goal is to provide a seamless shopping experience with flexible customization options and reliable delivery to ensure your flowers arrive fresh and on time. We also offer secure payment options and seasonal deals to help you express your feelings with the beauty of flowers.</p>
+            <p class="md:text-3xl text-2xl text-rose-900 font-serif font-bold text-center">ABOUT US</p>
+            <p class="md:text-2xl text-lg text-center font-serif md:w-[45vw] leading-relaxed my-3">Welcome to FLOWERS, we offer a wide selection of carefully arranged fresh flowers for all occasions, including weddings, birthdays, and special events. Our goal is to provide a seamless shopping experience with flexible customization options and reliable delivery to ensure your flowers arrive fresh and on time. We also offer secure payment options and seasonal deals to help you express your feelings with the beauty of flowers.</p>
              </div> 
 </div>
         </div>
-        <div class="bg-[url('1.jpg')] w-full h-[80vh] font-serif flex justify-center items-center gap-6">
-                <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
-                    <img class="w-64 h-64 rounded-2xl" src="10.JPG" alt="">
+        <div class="bg-[url('1.jpg')] w-full md:h-[80vh] font-serif flex justify-center items-center md:flex-row flex-col  md:gap-6 gap-6 py-14">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
+                <img class="w-64 h-64 rounded-2xl" src="10.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
                 <h2 class="font-bold">60$</h2>
-                <button class="bg-rose-800 w-32 h-10 text-white text-lg rounded-full mt-4">ORDER NOW</button>
+                <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ORDER NOW</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="11.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
                 <h2 class="font-bold">60$</h2>
-                <button class="bg-rose-800 w-32 h-10 text-white text-lg rounded-full mt-4">ORDER NOW</button>
+                <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ORDER NOW</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="13.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -72,7 +72,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ORDER NOW</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="23.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -81,46 +81,47 @@
                 </div>
             </div>
             </div>
-        
-        <div class="bg-white w-full h-[60vh] flex justify-center items-center gap-10">
-            <div class="flex justify-center items-center gap-10 h-64 w-[38vw] shadow-2xl">
-                <div class="flex flex-col items-start gap-5">
-                    <p class="text-rose-800 text-4xl font-serif">-15% Sale</p>
-                    <p class="text-lg">BOUQUETS OF FLOWER</p>  
+        <div>
+        <div class="bg-white w-full h-[60vh] md:flex justify-center items-center md:gap-10 gap-10 px-6 py-10 ">
+            <div class="flex justify-center items-center md:gap-10 md:h-64 md:w-[40vw] w-80 h-44 shadow-2xl">
+                <div class="flex flex-col items-start gap-3 px-3">
+                    <p class="text-rose-800 md:text-4xl text-2xl font-serif">-15% Sale</p>
+                    <p class="text-sm md:text-lg font-serif">BOUQUETS OF FLOWER</p>  
                 </div>
                 <div>
-                    <img class="w-64 h-56" src="37.jpg" alt="">
+                    <img class="md:w-64 md:h-56 w-40 h-28" src="37.jpg" alt="">
                 </div>
             </div>
-            <div class="flex justify-center items-center gap-10 h-64 w-[38vw] shadow-2xl">
-                <div class="flex w-96 flex-col items-start gap-2 px-5">
-                    <ul class="text-xl font-serif leading-loose list-disc list-inside">
-                        <li>Best way to say you care.</li>
-                        <li>Unique arrangments.</li>
-                        <li>Hand packed just for you.</li>
-                    </ul>
+            <div class="flex justify-center items-center md:gap-10 md:h-64 md:w-[40vw] w-80 h-44 shadow-2xl">
+                <div class="flex flex-col items-center justify-center gap-5 pt-3">
+                        <ul class="md:w-64 md:text-xl text-xs font-serif list-disc list-inside">
+                            <li>Best way to say you care.</li>
+                            <li>Unique arrangments.</li>
+                            <li>Hand packed just for you.</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <img class="md:w-64 md:h-56 w-40 h-28" src="39.jpg" alt="">
+                    </div>
                 </div>
-                <div>
-                    <img class="w-64 h-56" src="39.jpg" alt="">
-                </div>
-            </div>
         </div>
-        <div class="w-full h-60 bg-[url('1.jpg')] flex justify-center items-center gap-6">
-            <div class="w-[23vw] h-28 flex justify-center items-center gap-8 border-double border-4 border-gray-700">
+        </div>
+        <div class="md:w-full md:h-60  bg-[url('1.jpg')] flex justify-center items-center md:flex-row flex-col md:gap-6 gap-6 py-14">
+            <div class="md:w-[23vw] w-[75vw] md:h-28  h-32 flex justify-center items-center gap-8 border-double border-4 border-gray-700">
                 <img class="w-14 h-12 rounded-full" src="shipped.png" alt="">
                 <div>
                 <p class="font-bold">FREE SHIPPING</p>
                 <p class="font-extralight">Free shipping all order</p>
                 </div>
             </div>
-            <div class="w-[23vw] h-28 flex justify-center items-center gap-8 border-double border-4 border-gray-700">
+            <div class="md:w-[23vw] w-[75vw] md:h-28 h-32 flex justify-center items-center gap-8 border-double border-4 border-gray-700">
                 <img class="w-14 h-12 rounded-full" src="24-hours-service.png" alt="">
                 <div>
                 <p class="font-bold">SUPPORT 24/7</p>
                 <p class="font-extralight">Support 24 hours a day</p>
                 </div>
             </div>
-            <div class="w-[23vw] h-28 flex justify-center items-center gap-8 border-double border-4 border-gray-700">
+            <div class="md:w-[23vw] w-[75vw] md:h-28 h-32 flex justify-center items-center gap-8 border-double border-4 border-gray-700">
                 <img class="w-14 h-12 rounded-full" src="return-of-investment.png" alt="">
                 <div>
                 <p class="font-bold">MONEY RETURN</p>
@@ -130,16 +131,15 @@
         </div>
     </main>
     <footer>
-        <div class="bg-rose-200 w-full h-20 flex justify-around items-center gap-60">
+        <div class="bg-rose-200 w-full h-20 flex justify-around items-center md:gap-60 sm:gap-10">
             <div>
-                <p class=" text-2xl font-serif font-bold text-black">FLOWERS.</p>
+                <p class="md:text-2xl sm:text-base font-serif font-bold text-black">FLOWERS.</p>
             </div>
-            <div class="flex gap-6">
+            <div class="flex md:gap-6 gap-2">
                 <img class="w-8 h-8" src="twitter.svg" alt="">
                 <img class="w-8 h-8" src="inastagram.svg" alt="">
                 <img class="w-8 h-8" src="facebook.svg" alt="">
                 <img class="w-8 h-8" src="snapchat.svg" alt="">
-
             </div>
         </div>
     </footer>
