--- a/product.html
+++ b/product.html
@@ -9,37 +9,37 @@
 <body>
     <main>
         <div class="bg-[url('40.jpg')] w-full bg-cover h-[50vh] pt-4 px-4">
-            <nav class="flex justify-between items-center px-12 py-4 bg-white rounded-full">
+            <nav class="flex justify-between items-center md:px-12 px-3 py-4 bg-white rounded-full">
                 <div>
-                <p class=" text-2xl font-serif font-bold text-black">FLOWERS.</p>
-            </div>  
-            <div class="flex gap-12 text-black font-serif text-lg font-extralight">
-                <a href="index.html">Home</a>
-                <a href="">About</a>
-                <a href="product.html">Product</a>
-                <a href="">Communication</a>
-            </div>
-            <div class="flex gap-4">
-                <a href=""><img class="w-10 h-10" src="/Users/latifahalkhalaf/Desktop/Project/shopping-bag.png" alt=""></a>
-                <a href=""><img class="w-10 h-10"  src="/Users/latifahalkhalaf/Desktop/Project/user.png" alt=""></a>
-            </div>
-        </nav>
+                    <p class="text-base md:text-2xl font-serif font-bold text-black">FLOWERS.</p>
+                </div>  
+                <div class="hidden md:flex gap-12 text-black font-serif text-lg font-extralight">
+                    <a href="index.html">Home</a>
+                    <a href="">About</a>
+                    <a href="product.html">Product</a>
+                    <a href="">Communication</a>
+                </div>
+                <div class="flex gap-4">
+                    <a href=""><img class="md:w-10 md:h-10 w-8 h-8" src="/Users/latifahalkhalaf/Desktop/Project/shopping-bag.png" alt=""></a>
+                    <a href=""><img class="md:w-10 md:h-10 w-8 h-8"  src="/Users/latifahalkhalaf/Desktop/Project/user.png" alt=""></a>
+                </div>
+            </nav>
         <div class="flex items-center h-[50vh] px-5">
-            <p class="text-4xl text-rose-800 font-serif font-bold"><span class="text-6xl font-bold px-10">|</span>FLOWERS DAY...</p>
+            <p class="text-2xl md:text-4xl text-rose-800 font-serif font-bold"><span class="text-6xl font-bold md:px-10 px-2">|</span>FLOWERS DAY...</p>
         </div>
 </div>
-<div>
-    <p class="text-4xl text-center text-rose-800 font-bold font-serif mt-10 pt-10">BOUQUETS OF FLOWER</p>
-        <div class="w-full h-[380vh] font-serif grid grid-cols-4 justify-items-center gap-y-0 gap-x-6 px-20 mt-10">
-                <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+<div class="md:h-[380vh] py-14">
+    <p class="text-2xl md:text-4xl text-center text-rose-800 font-bold font-serif mt-10 pt-5">BOUQUETS OF FLOWER</p>
+        <div class="w-full md:h-[380vh] font-serif grid md:grid-cols-4 sm:grid-cols-1 justify-items-center md:gap-y-0 md:gap-x-6 gap-y-6 md:px-20 mt-10">
+                <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                     <img class="w-64 h-64 rounded-2xl" src="10.JPG" alt="">
-                <div class="flex flex-col items-start w-60 gap-1">
+                <div class="flex flex-col items-start w-60 md:gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
                 <h2 class="font-bold">60$</h2>
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="11.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -47,7 +47,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="13.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -55,7 +55,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="23.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -63,7 +63,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="7.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -71,7 +71,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="8.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -79,7 +79,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="9.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -87,7 +87,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="12.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -95,7 +95,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="14.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -103,7 +103,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="15.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -111,7 +111,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="16.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -119,7 +119,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="17.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -127,7 +127,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="18.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -135,7 +135,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="19.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -143,7 +143,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="20.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -151,7 +151,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="21.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -159,7 +159,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="22.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -167,7 +167,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="23.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -175,7 +175,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="24.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -183,7 +183,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="25.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -191,7 +191,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="26.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -199,15 +199,15 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="32.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
                 <h2 class="font-bold">60$</h2>
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
-            </div>            
-            <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            </div> 
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">           
                 <img class="w-64 h-64 rounded-2xl" src="31.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -215,7 +215,7 @@
                 <button class="bg-rose-800 w-32 h-10 text-white text-base rounded-full mt-4">ADD TO CART</button>
                 </div>
             </div>           
-             <div class="bg-white rounded-2xl w-[21vw] h-[53vh] flex items-center justify-center flex-col gap-2 shadow-2xl">
+            <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
                 <img class="w-64 h-64 rounded-2xl" src="30.JPG" alt="">
                 <div class="flex flex-col items-start w-60 gap-1">
                 <p class="text-lg">Flowers Bouquet</p>
@@ -227,15 +227,15 @@
         </div>
     </main>
     <footer>
-        <div class="bg-rose-200 w-full h-20 flex justify-around items-center gap-60">
+        <div class="bg-rose-200 w-full h-20 flex justify-around items-center md:gap-60">
             <div>
-                <p class=" text-2xl font-serif font-bold text-black">FLOWERS.</p>
+                <p class="md:text-2xl sm:text-base font-serif font-bold text-black">FLOWERS.</p>
             </div>
-            <div class="flex gap-6">
-                <img class="w-8 h-8" src="twitter.svg" alt="">
-                <img class="w-8 h-8" src="inastagram.svg" alt="">
-                <img class="w-8 h-8" src="facebook.svg" alt="">
-                <img class="w-8 h-8" src="snapchat.svg" alt="">
+            <div class="flex md:gap-6 gap-2">
+                <img class="md:w-8 md:h-8 w-6 h-6" src="twitter.svg" alt="">
+                <img class="md:w-8 md:h-8 w-6 h-6" src="inastagram.svg" alt="">
+                <img class="md:w-8 md:h-8 w-6 h-6" src="facebook.svg" alt="">
+                <img class="md:w-8 md:h-8 w-6 h-6" src="snapchat.svg" alt="">
 
             </div>
         </div>
