--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
     </main>
     <footer>
-        <div class="bg-rose-200 w-full h-20 flex justify-around items-center md:gap-60 sm:gap-10">
+        <div class="bg-rose-200 w-full h-20 flex justify-around items-center md:gap-60 gap-10">
             <div>
                 <p class="md:text-2xl sm:text-base font-serif font-bold text-black">FLOWERS.</p>
             </div>
