--- a/product.html
+++ b/product.html
@@ -28,7 +28,7 @@
             <p class="text-2xl md:text-4xl text-rose-800 font-serif font-bold"><span class="text-6xl font-bold md:px-10 px-2">|</span>FLOWERS DAY...</p>
         </div>
 </div>
-<div class="md:h-[380vh] py-14">
+<div class="md:h-[420vh] py-14">
     <p class="text-2xl md:text-4xl text-center text-rose-800 font-bold font-serif mt-10 pt-5">BOUQUETS OF FLOWER</p>
         <div class="w-full md:h-[380vh] font-serif grid md:grid-cols-4 sm:grid-cols-1 justify-items-center md:gap-y-0 md:gap-x-6 gap-y-6 md:px-20 mt-10">
                 <div class="bg-white rounded-2xl md:w-[21vw] md:h-[53vh] w-72 h-[50vh] pt-2 flex items-center justify-center flex-col md:gap-2 shadow-2xl">
@@ -227,16 +227,15 @@
         </div>
     </main>
     <footer>
-        <div class="bg-rose-200 w-full h-20 flex justify-around items-center md:gap-60">
+        <div class="bg-rose-200 w-full h-20 flex justify-around items-center md:gap-60 gap-10">
             <div>
                 <p class="md:text-2xl sm:text-base font-serif font-bold text-black">FLOWERS.</p>
             </div>
             <div class="flex md:gap-6 gap-2">
-                <img class="md:w-8 md:h-8 w-6 h-6" src="twitter.svg" alt="">
-                <img class="md:w-8 md:h-8 w-6 h-6" src="inastagram.svg" alt="">
-                <img class="md:w-8 md:h-8 w-6 h-6" src="facebook.svg" alt="">
-                <img class="md:w-8 md:h-8 w-6 h-6" src="snapchat.svg" alt="">
-
+                <img class="w-8 h-8" src="twitter.svg" alt="">
+                <img class="w-8 h-8" src="inastagram.svg" alt="">
+                <img class="w-8 h-8" src="facebook.svg" alt="">
+                <img class="w-8 h-8" src="snapchat.svg" alt="">
             </div>
         </div>
     </footer>
