--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <a href="">Communication</a>
                 </div>
                 <div class="flex gap-4">
-                    <a href=""><img class="md:w-10 md:h-10 w-8 h-8" src="shopping-bag.png" alt=""></a>
-                    <a href=""><img class="md:w-10 md:h-10 w-8 h-8"  src="user.png" alt=""></a>
+                    <a href=""><img class="md:w-10 md:h-10 w-8 h-8" src="41.png" alt=""></a>
+                    <a href=""><img class="md:w-10 md:h-10 w-8 h-8"  src="42.png" alt=""></a>
                 </div>
             </nav>
         <div class="flex flex-col justify-center  gap-14 w-full h-[80vh] md:pt-20 md:px-14 px-4">
